# 0.00.83 (65090) Jun 15, 2012
Fraction Matcher: Changed pattern on startup screen
Fraction Matcher: Reworded buttons
# 0.00.82 (64985) Jun 12, 2012
Removed dependency on xstream
Fraction Matcher: Wired up new startup/level selection screen
Fraction Matcher: Added new startup/level selection screen
Fraction Matcher: Fixed: Red wasn't appearing correctly for fractions > 1
Build a fraction tab: Fixed: scoring cells weren't flashing red for level 1
# 0.00.81 (64935) Jun 11, 2012
Fraction Matcher: Added red as a representation color
Fraction Matcher: Always show the "check answer" button on the left side
Fraction Matcher: Made the big yellow equals sign have square corners instead of rounded
Fraction Matcher: Fixed: For fractions > 1, sometimes the bar on the number line uses green instead of the representation color
Fraction Matcher: Fixed the stroke outline anomalies in polygon strokes
Build a fraction tab: On higher levels, it shouldn't highlight when you get the right value--the user has to drag it there to check
Build a fraction tab: Added a level
Build a fraction tab: Made it possible to have more than 3 scoring cells
Build a fraction tab: Fixed: Score went to -1 when popping out a single fraction from a non-complete level.
Build a fraction tab: Added score readout: each completed level is worth one point
Build a fraction tab: Improved fonts and layout for scoreboard
Build a fraction tab: Made it so you can't drop more than one match into a scoring cell
Build a fraction tab: Added transparency animation to the smilie face dialog
Build a fraction tab: Fixed: When ejecting a fraction from a scoring cell when smilie face is showing, should unshow the smiling face.
Build a fraction tab: Fixed: When ejecting a fraction from the scoring cell, it should become a card again.
Build a fraction tab: For fractions, split button should be on the left to match up with when the fraction is in the scoring cell.