@@ -1,2 +1,3 @@
 blue-stopwatch.png source=www.freeclipartnow.com notes=Public Domain license, see http://www.freeclipartnow.com/termsofuse.php
 sound-icon.png author=PhET
+sound-off-icon.png author=PhET notes=modified by SR from sound-icon.png
