@@ -27,7 +27,15 @@ import edu.umd.cs.piccolo.event.PInputEvent;
 public class ToggleButtonNode extends PNode {
     private final DynamicCursorHandler cursorHandler = new DynamicCursorHandler();
 
+    //Nice shade of green to show for selected (pressed in) toggle button nodes.
+    public static final Color FAINT_GREEN = new Color( 215, 237, 218 );
+    public static final Color DEFAULT_BACKGROUND_COLOR = new Color( 242, 242, 242 );
+
     public ToggleButtonNode( final PNode node, final ObservableProperty<Boolean> selected, final VoidFunction0 pressed ) {
+        this( node, selected, pressed, DEFAULT_BACKGROUND_COLOR, true );
+    }
+
+    public ToggleButtonNode( final PNode node, final ObservableProperty<Boolean> selected, final VoidFunction0 pressed, final Color pressedInColor, final boolean disableCursorWhenPressedIn ) {
 
         //We have to handle the pickability since the cursor changes, so disable on the target node
         node.setPickable( false );
@@ -36,22 +44,21 @@ public class ToggleButtonNode extends PNode {
         final double pressAmountX = 4;
         final double pressAmountY = 6;
         final PhetPPath hiddenBorder = new PhetPPath( RectangleUtils.expand( node.getFullBounds(), pressAmountX, pressAmountY ), null );
-        final PhetPPath border = new PhetPPath( new RoundRectangle2D.Double( node.getFullBounds().getMinX(), node.getFullBounds().getMinY(), node.getFullBounds().getWidth(), node.getFullBounds().getHeight(), 20, 20 ), new Color( 242, 242, 242 ), new BasicStroke( 4, BasicStroke.CAP_ROUND, BasicStroke.JOIN_MITER ), null );
-        final PhetPPath shadow = new PhetPPath( new RoundRectangle2D.Double( node.getFullBounds().getMinX(), node.getFullBounds().getMinY(), node.getFullBounds().getWidth(), node.getFullBounds().getHeight(), 20, 20 ), Color.darkGray );
+        final RoundRectangle2D.Double shape = new RoundRectangle2D.Double( node.getFullBounds().getMinX(), node.getFullBounds().getMinY(), node.getFullBounds().getWidth(), node.getFullBounds().getHeight(), 20, 20 );
+        final PhetPPath buttonBackground = new PhetPPath( shape, DEFAULT_BACKGROUND_COLOR, new BasicStroke( 4, BasicStroke.CAP_ROUND, BasicStroke.JOIN_MITER ), null );
+        final PhetPPath shadow = new PhetPPath( shape, Color.darkGray );
 
         selected.addObserver( new VoidFunction1<Boolean>() {
             public void apply( Boolean selected ) {
-                border.setStrokePaint( new Color( 178, 178, 178 ) );
-
-                //Show a highlight around the button border when selected?  Looks awkward when the buttons toggle in
-//                border.setStrokePaint( selected ? Color.yellow : new Color( 178, 178, 178 ) );
-                border.setStroke( selected ? new BasicStroke( 2 ) : new BasicStroke( 2 ) );
+                buttonBackground.setStrokePaint( new Color( 178, 178, 178 ) );
+                buttonBackground.setPaint( selected ? pressedInColor : DEFAULT_BACKGROUND_COLOR );
                 node.setOffset( selected ? new Point( 0, 0 ) : new Point2D.Double( -pressAmountX, -pressAmountY ) );
-                border.setOffset( selected ? new Point( 0, 0 ) : new Point2D.Double( -pressAmountX, -pressAmountY ) );
+                buttonBackground.setOffset( selected ? new Point( 0, 0 ) : new Point2D.Double( -pressAmountX, -pressAmountY ) );
 
-                //If the button got pressed in, change from being a hand to an arrow so it doesn't like you can still press the button
-                //And vice versa
-                cursorHandler.setCursor( selected ? Cursor.DEFAULT_CURSOR : Cursor.HAND_CURSOR );
+                //If the button got pressed in, change from being a hand to an arrow so it doesn't like you can still press the button and vice versa
+                if ( disableCursorWhenPressedIn ) {
+                    cursorHandler.setCursor( selected ? Cursor.DEFAULT_CURSOR : Cursor.HAND_CURSOR );
+                }
             }
         } );
 
@@ -64,8 +71,8 @@ public class ToggleButtonNode extends PNode {
 
         addChild( hiddenBorder );
         addChild( shadow );
-        addChild( border );
+        addChild( buttonBackground );
         addChild( node );
-        node.centerFullBoundsOnPoint( border.getFullBounds().getCenterX(), border.getFullBounds().getCenterY() );
+        node.centerFullBoundsOnPoint( buttonBackground.getFullBounds().getCenterX(), buttonBackground.getFullBounds().getCenterY() );
     }
 }
