@@ -1,3 +1,6 @@
+Fraction Matcher: Made sound button and timer buttons keep the hand cursor when pressed in
+Fraction Matcher: Made sound button change icon when pressed in
+Fraction Matcher: Made sound and timer buttons turn green when pressed in
 # 0.00.83 (65090) Jun 15, 2012
 Fraction Matcher: Changed pattern on startup screen
 Fraction Matcher: Reworded buttons
